# datathon

./: .gitignore  Docker  Dockerfile  README.md  config.py  docker-compose.yaml  fly.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
scripts/api/: auth.py  chat_system.py  feature3.py  knowledge_system.py  profile.py  teacher_support.py
scripts/core/: database.py  document_processor.py  model_schema.py  templates.py
scripts/services/: chat_assistant.py  curriculum_assistant.py  database.py  feature3.py  llm_service_unused.py  new_feature.py  rag_service_unused.py  summary_assistant.py  teacher_needs_engine.py  templates.py
templates/: chat.html  dashboard.html  knowledge-coach.html  knowledge_compressor.html  landing.html  lesson-copilot.html  login.html  need-assessment.html  need-assessment2.html  report.html  teacher-profile.html  teacher_input.html
